--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -3,10 +3,15 @@
           <div class="item">
             <div class="ps-banner left">
               <div class="container"><img src="assets/assetslameseria/img/home-banner/home-1/1.png" alt="">
-                <div class="ps-banner__content">
-                  <h5>Spring - Summer 2018</h5>
-                  <h1>ZONA DE BANNERS</h1>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit essecillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat nonproident</p><a class="ps-btn ps-btn--outline ps-btn--black" href="index.html#">Shop Now</a>
+                <div class="ps-banner__content" style="max-width: 40%;">
+                  <h5>Estimados clientes</h5>
+                  <h1>DESPACHAMOS A TODO CHILE</h1>
+                  <p>Seguimos recibiendo y despachando pedidos por medio de nuestra tienda On Line.</p>
+                  <p>Contamos con los permisos y protocolos necesarios para despachar sus productos a comunas con y sin cuarentena. </p>
+                  <p>Despachos gratis para todo Santiago.</p>
+                  <p>Si tienes dudas o preguntas contáctanos a nuestros teléfonos disponibles o por medio de nuestras redes sociales <b>@lamesería.cl</b></p>
+                  <p>Equipo La Mesería.</p>
+<!-- <a class="ps-btn ps-btn--outline ps-btn--black" href="index.html#">Shop Now</a> -->
                 </div>
               </div>
             </div>
