--- a/src/assets/assetslameseria/css/style.css
+++ b/src/assets/assetslameseria/css/style.css
@@ -7272,7 +7272,9 @@ textarea.form-control {
 
 .ps-banner {
   position: relative;
-  background-color: #f8f8fa;
+  /*background-color: #f8f8fa;*/ 
+  /*color fondo banner*/
+  background-color: #e4e4e4;
 }
 
 .ps-banner .container {
@@ -7325,7 +7327,7 @@ textarea.form-control {
 }
 
 .ps-banner.left .ps-banner__content {
-  left: 0;
+  left: 45px;
 }
 
 .ps-banner.right .ps-banner__content {
