--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -3,7 +3,7 @@
           <div class="item">
             <div class="ps-banner left">
               <div class="container"><img src="assets/assetslameseria/img/home-banner/home-1/1.png" alt="">
-                <div class="ps-banner__content" style="max-width: 40%;">
+                <div class="ps-banner__content" style="max-width: 50%;">
                   <h5>Estimados clientes</h5>
                   <h1>DESPACHAMOS A TODO CHILE</h1>
                   <p>Seguimos recibiendo y despachando pedidos por medio de nuestra tienda On Line.</p>
@@ -11,7 +11,16 @@
                   <p>Despachos gratis para todo Santiago.</p>
                   <p>Si tienes dudas o preguntas contáctanos a nuestros teléfonos disponibles o por medio de nuestras redes sociales <b>@lamesería.cl</b></p>
                   <p>Equipo La Mesería.</p>
-<!-- <a class="ps-btn ps-btn--outline ps-btn--black" href="index.html#">Shop Now</a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="ps-banner center-1">
+              <div class="container"><img src="assets/assetslameseria/img/home-banner/home-1/3.png" alt="">
+                <div class="ps-banner__content" style="margin-top: -13%;">
+                  <h1>Renueva tus espacios con La Meseria.</h1>
+                  <p>Compra On Line y disfruta aún más tu hogar.</p>
                 </div>
               </div>
             </div>
@@ -20,19 +29,8 @@
             <div class="ps-banner right">
               <div class="container"><img src="assets/assetslameseria/img/home-banner/home-1/2.png" alt="">
                 <div class="ps-banner__content">
-                  <h5>2018 New Arrivals</h5>
-                <h1>ZONA DE BANNERS</h1>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit essecillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat nonproident</p><a class="ps-btn ps-btn--outline ps-btn--black" href="index.html#">Shop Now</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="ps-banner center-1">
-              <div class="container"><img src="assets/assetslameseria/img/home-banner/home-1/3.png" alt="">
-                <div class="ps-banner__content">
-                  <h4>Summer 2018</h4>
-          <h1>ZONA DE BANNERS</h1><a class="ps-btn ps-btn--outline ps-btn--black" href="index.html#">Shop Now</a>
+                <h1>Descubre nuestra colección en madera Lenga.</h1>
+                  <p>Harán de tus espacios un lugar más cómodo, más cálido y más acogedor.</p>
                 </div>
               </div>
             </div>
