--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -56,7 +56,7 @@
               <form class="ps-form--subscribe-footer" action="#" method="post">
                 <p>Suscríbase a nuestro boletín y obtenga un descuento en su primera compra</p>
                 <div class="form-group">
-                  <input class="form-control" type="text" placeholder="Your EmaiL Address">
+                  <input class="form-control" type="text" placeholder="Tu dirección de correo">
                   <button>Suscribete</button>
                 </div><img src="assets/assetslameseria/img/payment2.png" alt="">
               </form>
