--- a/src/app/components/productdetail/productdetail.component.html
+++ b/src/app/components/productdetail/productdetail.component.html
@@ -36,7 +36,7 @@
                 <p><b>Dimensiones: </b> {{_uw.tixPreview.dimensiones}}</p>
               </div>
               <div class="ps-product__shopping">
-                <div class="form-group--number" *ngIf="{{this.ngFormAddToCar.value.cantidad}}">
+                <div class="form-group--number" *ngIf="this.ngFormAddToCar.value.cantidad">
                   <button class="up"><i class="fa fa-plus"></i></button>
                   <button class="down"><i class="fa fa-minus"></i></button>
                   <!-- <input class="form-control" type="text" placeholder="1"> -->
